# python-e3dc

./: .gitignore  .readthedocs.yaml  AUTHORS  LICENSE  README.md  e3dc.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: make_wheel.yml  validate.yaml  validate.yml
docs/: requirements.txt
docs/source/: conf.py  e3dc.rst  index.rst
e3dc/: _RSCPEncryptDecrypt.py  __init__.py  _e3dc.py  _e3dc_rscp.py  _e3dc_rscp_local.py  _e3dc_rscp_web.py  _rscpLib.py  _rscpTags.py
examples/: dpp_example.py
tools/: README.md  _convert_rscp_tags.py  convert_rscp_tags.py  testcontainers.py  tests.py  validate.sh
