[metadata]
name = pye3dc
version = attr: e3dc.__version__
description = E3/DC client for python.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Francesco Santini
author_email = francesco.santini@gmail.com
url = https://github.com/fsantini/python-e3dc
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe=False
python_requires = >=3.7
install_requires =
    py3rijndael
    python-dateutil
    requests
    tzlocal
    websocket-client
packages = e3dc

[isort]
profile = black

[flake8]
exclude = .venv, .git, build, docs
max-line-length = 88
docstring-convention = google
# E741, E722, F601 should be fixed
extend-ignore = E203, E302, E501, W293, E741, E722, F601